--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,16 @@
        - image: circleci/ruby:2.4.1
      steps:
        - run: echo "From job2"
+   job3:
+     docker:
+       - image: circleci/ruby:2.4.1
+     steps:
+       - run: echo "From job3"
+  workflows:
+    workflow1:
+      jobs:
+        - job2
+    workflow2:
+      jobs:
+        - job3
+ 
