--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
      docker:
        - image: circleci/ruby:2.4.1
      steps:
-       - run: echo "From job4"      
+       - run: env      
 workflows:
     version: 2
     workflow1:
