--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
      docker:
        - image: circleci/ruby:2.4.1
      steps:
-       - run: ls -la ~/.ssh
+       #- run: ls -la ~/.ssh
        - add_ssh_keys
        - run: echo "From job2"
        - run: ls -la ~/.ssh
