--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
        - add_ssh_keys
        - run: echo "From job2"
        - run: ls -la ~/.ssh
+       - run: cat ~/.ssh/config
    job3:
      docker:
        - image: circleci/ruby:2.4.1
