--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,14 +26,14 @@ jobs:
        - image: circleci/ruby:2.4.1
      steps:
        - run: echo "From job3a"
-       - run echo $pwd $CIRCLE_WORKING_DIRECTORY
+       - run echo $(pwd) $CIRCLE_WORKING_DIRECTORY
    job3b:
      docker:
        - image: circleci/ruby:2.4.1
      steps:
        - run: echo "From job3b"
        - run:
-           command: echo $pwd $CIRCLE_WORKING_DIRECTORY
+           command: echo $(pwd) $CIRCLE_WORKING_DIRECTORY
            name: 3b
            working_directory: /tmp
    job4:
