--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,11 @@ jobs:
 workflows:
     version: 2
     workflow1:
+      triggers:
+        - schedule:
+            cron: "0 18 * * *"
+            branches:
+              only: master
       jobs:
         - job4
-    workflow2:
-      jobs:
-        - job5
        
