--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,10 @@ workflows:
             filters:
               branches:
                 only: patate
+        - job3b:
+            filters:
+              branches:
+                only: master          
         - job6:
             name: job6b
             requires:
