--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,5 +83,11 @@ workflows:
             filters:
               branches:
                 only: master
-                
-                
+        - job6:
+            name: job6c
+            requires:
+              - job6b
+            filters:
+              branches:
+                only: master
+     
